xib布局增加设置属性代码。

--- a/MyCustomUIView/XibLayoutViewController.xib
+++ b/MyCustomUIView/XibLayoutViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="XibLayoutViewController">
             <connections>
+                <outlet property="myCustomView" destination="QV2-QF-IIn" id="gFI-0y-Eu1"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
